# ece148-opencv-driving

./: .gitignore  README.md  Untitled.ipynb  lane_detect.py  main.py  move_models.py  network_model.py  opencv.py  pyproject.toml  rl.py  train.py  utils.py
dataset_readers/: file_dataset.py
drivers/: ai_driver.py  driver.py  joystick_driver.py
writers/: file_writer.py  writer.py
