[tool.poetry]
name = "ece148-opencv-driving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
opencv-python = "^4.5.3"
opencv-contrib-python = "^4.5.3"
adafruit-circuitpython-pca9685 = "^3.3.8"
adafruit-circuitpython-servokit = "^1.3.4"
torch = "^1.9.0"
torchvision = "^0.10.0"
scikit-image = "^0.18.3"
pandas = "^1.3.2"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
